gitops/apps/squad-a/webserver-go-01/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-go-01
spec:
  template:
    spec:
      containers:
      - name: webserver-go-01
