gitops/apps/squad-a/webserver-go-01/overlays/staging/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-go-01-virtualservice
spec:
  gateways:
    - webserver-hom/squad-a-go-gateway
  hosts:
    - ws.hom.squad.a.go.lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webserver-go-01-svc.webserver-hom.svc.cluster.local
